tests/NormalTests/paczka1/fuzzy1/55614600.err
Error in line 4: e5cDG4 A418 81,4
Error in line 5: A105 S589 20,0
Error in line 7: e5cDG4 A105 13,9
Error in line 24: A105 A105 44,9
Error in line 35: Fu6 S589 76,6
